k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reqspace-web
spec:
  selector:
    app: reqspace-web
  ports:
  - port: 80
    targetPort: 3005
  type: ClusterIP
